unpackaged/main/default/objects/BatchProcess__c/BatchProcess__c.object-meta.xml
<CustomObject>
    <label>BatchProcess</label>
    <nameField>
        <displayFormat>BP-{000000000}</displayFormat>
        <label>BatchProcess Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BatchProcess</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>