unpackaged/main/default/objects/BatchProcess__c/fields/FileName__c.field-meta.xml
<CustomField>
    <fullName>FileName__c</fullName>
    <label>Input File Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>