unpackaged/main/default/objects/BatchProcess__c/fields/Output_File_Name__c.field-meta.xml
<CustomField>
    <fullName>Output_File_Name__c</fullName>
    <label>Output File Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>