unpackaged/main/default/objects/BatchProcess__c/fields/OutputFileName__c.field-meta.xml
<CustomField>
    <fullName>OutputFileName__c</fullName>
    <label>OutputFileName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>