unpackaged/main/default/objects/BatchProcess__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FileName__c</columns>
    <columns>IsProcessed__c</columns>
    <columns>Sequence__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>